<resources>
    <string name="app_name">SmartFridge</string>
    <string name="enter_your_mail_username">Enter your mail/username</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="login">login</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="create_an_account">Create Account</string>
    <string name="not_implemented_yet">NOT IMPLEMENTED YET</string>
    <string name="log_in">Log In</string>
    <string name="welcome_to_smartfridge">Welcome to SmartFridge</string>
    <string name="your_intelligent_food_companion_ncheck_your_fridge_from_anywhere">Your intelligent food companion.\nCheck your fridge from anywhere.</string>
    <string name="fridge_illustration">Fridge illustration</string>
    <string name="logout">Back</string>
    <string name="logged_in">LOGGED IN</string>
    <string name="preference_file_key">daclinkPreferenceFileNameSmartFridge</string>
    <string name="preference_userId_key">daclinkPreferenceUserIdKeySmartFridge</string>
    <string name="hello">HELLO</string>
    <string name="admin">Admin</string>
    <string name="logout2">Logout</string>
    <string name="add_meal">Add meal</string>
    <string name="meal_name">Meal name</string>
    <string name="pick_date">Pick date</string>
    <string name="add_a_meal_to_the_calendar">Add a meal to the calendar</string>
    <string name="welcome_to_the_stock">Welcome to the Stock</string>
    <string name="generate_a_list">generate a list</string>
    <string name="deleteStock">delete</string>
    <string name="addStock">add</string>
    <string name="enter_food_s_name">Enter food\'s name</string>
    <string name="enter_the_amount">Enter the amount</string>
    <string name="back">Back</string>

    <string name="start_recipie">Start Recipie</string>
    <string name="see_more">See more</string>
    <string name="schedule_recipie">schedule recipie</string>
    <string name="test_lucas">test Lucas</string>
    <string name="foodlist">FoodList</string>
    <string name="date">Date</string>
    <string name="meal_s_name">Meal\'s name</string>

    <string name="add_an_ingredient">Add an Ingredient</string>
    <string name="instruction">Instruction</string>
    <string name="description">Description</string>
    <string name="name_of_the_recipie">Name of the Recipie</string>
    <string name="save_recipie">Save Recipie</string>
    <string name="quantity">Quantity (g or ml)</string>
    <string name="ingredient">Ingredient</string>
    <string name="create_recipie">Create Recipie</string>

    <string name="recipy_name">Nom de la recette</string>
    <string name="descriptiontext">DescriptionText</string>

    <string name="ingredients">Ingrédients</string>
    <string name="ingredient_list">Liste des ingrédients</string>
    <string name="instruction_Static">Instructions</string>
    <string name="instruction_text">Texte de l’instruction</string>
    <string name="finished_recipe">Recette terminée</string>
    <string name="shopping_list">Shopping list</string>
    <string name="bought">bought</string>
    <string name="welcome_to_the_shopping_list">welcome to the shopping list</string>

    <string name="unknow_recipe">Unknow Recipe</string>
    <string name="api_search">Api Search</string>
    <string name="default_web_client_id">72900674551-qd17uv0p0fu8ujttig5m7243nd4p0oae.apps.googleusercontent.com</string>
    <string name="switch_to_dark_mode">switch to dark mode</string>
    <string name="switch_to_light_mode">switch to light mode</string>
    <string name="change_password">Change Password</string>
    <string name="settings">Settings</string>
    <string name="delete_account">Delete Account</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="confirm">Confirm</string>


</resources>
