<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <EditText
        android:id="@+id/recipe_name_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/name_of_the_recipie"
        app:layout_constraintStart_toEndOf=""
        app:layout_constraintTop_toBottomOf=""
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/recipe_description_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@id/recipe_name_EditText"
        app:layout_constraintTop_toBottomOf="@id/recipe_name_EditText"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/recipe_instruction_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/instruction"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@id/recipe_description_EditText"
        app:layout_constraintTop_toBottomOf="@id/recipe_description_EditText"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/add_ingredient_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_an_ingredient"
        app:layout_constraintStart_toEndOf="@id/recipe_instruction_EditText"
        app:layout_constraintTop_toBottomOf="@id/recipe_instruction_EditText"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ingredients_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@id/add_ingredient_button"
        app:layout_constraintTop_toBottomOf="@id/add_ingredient_button"/>

    <Button
        android:id="@+id/save_recipe_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_recipie"
        app:layout_constraintStart_toEndOf="@id/ingredients_recyclerView"
        app:layout_constraintTop_toBottomOf="@id/ingredients_recyclerView"/>

</androidx.constraintlayout.widget.ConstraintLayout>