<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/LogoutButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="512dp"
        android:gravity="center"
        android:text="@string/logout"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/login"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/CreateAccountButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.762"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/register"
        android:textSize="13sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="120dip"
        android:id="@+id/EmptyTextView"
        android:textSize="42sp"
        android:gravity="center"
        android:layout_margin="16dip"
        android:layout_marginBottom="240dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/userNameRegisterEditText"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_margin="16dp"
        android:layout_marginTop="84dp"
        android:autofillHints="PLease enter username"
        android:gravity="center"
        android:hint="@string/enter_your_mail_username"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/EmptyTextView"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:id="@+id/passwordRegisterEditText"
        android:hint="@string/enter_your_password"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/userNameRegisterEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="PLease enter password"
        android:gravity="center"
        android:textSize="24sp"
        android:inputType="textPassword"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:id="@+id/ConfirmPasswordRegisterEditText"
        android:hint="@string/confirm_your_password"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/passwordRegisterEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="PLease enter password"
        android:gravity="center"
        android:textSize="24sp"
        android:inputType="textPassword"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/SignInButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="512dp"
        android:gravity="center"
        android:text="@string/create_an_account"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.858"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>