<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".database.stocks.StockActivity">
    <TextView
        android:id="@+id/stock_title"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="@string/welcome_to_the_stock"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/displayStock"
        android:layout_width="412dp"
        android:layout_height="550dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="35dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addFoodInStockButton"
        android:layout_width="140dp"
        android:layout_height="54dp"
        android:text="@string/addStock"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="342dp"
        app:layout_constraintTop_toBottomOf="@+id/displayStock"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/deleteFoodInStockButton"
        android:layout_width="140dp"
        android:layout_height="54dp"
        android:text="@string/deleteStock"
        app:layout_constraintStart_toEndOf="@+id/addFoodInStockButton"
        app:layout_constraintTop_toBottomOf="@+id/displayStock"
        />

    <Button
        android:id="@+id/generateAListFoodInStockButton"
        android:layout_width="135dp"
        android:layout_height="54dp"
        android:text="@string/generate_a_list"
        app:layout_constraintTop_toBottomOf="@+id/displayStock"
        app:layout_constraintStart_toEndOf="@id/deleteFoodInStockButton"
        />


</androidx.constraintlayout.widget.ConstraintLayout>