<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/recipie_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="26dp"
        android:text="test"/>
    <TextView
        android:id="@+id/recipie_description_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="test"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="14dp"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/start_recipie_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/start_recipie" />

        <Button
            android:id="@+id/recipie_more_info_Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:text="@string/see_more" />

        <Button
            android:id="@+id/recipie_schedule_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:text="@string/schedule_recipie" />
    </LinearLayout>
</LinearLayout>
